<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="30dp"

                app:srcCompat="@drawable/tt_img" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_usr"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/psw_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                >



                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/psw_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_pass"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>




            <Button
                android:id="@+id/btnSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sign"

                android:backgroundTint="@color/secondaryColor"
                android:textColor="@color/secondaryTextColor"
                android:layout_gravity="center"
                />


            <TextView
                android:id="@+id/sign_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"                android:textStyle="bold"
                android:layout_gravity="center"
                android:text="@string/text_reg"
                android:textColor="@color/secondaryDarkColor"
                android:layout_marginTop="2dp"

            />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>

